[package]
name = "structured_persistent_logger"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/klaatu01/structured_persistent_logger"
description = "A structured 'log' logger that allows for persistent fields"
documentation = "https://docs.rs/klaatu01/0.1.0/structured_persistent_logger/"
readme = "README.md"
license = "MIT"
keywords = ["log", "structured", "persistent", "logger"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
lazy_static = "1.4.0"
log = { version = "0.4.20", features = ["kv_unstable_serde"] }
serde = "1.0.192"
serde_json = "1.0.108"
